--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -20,11 +20,11 @@ RUN apt-get update \
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install --upgrade pip
+RUN pip install --upgrade pip
 
 COPY ./requirements.txt /app/requirements.txt 
 
-RUN pip3 install -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY ./docker/local/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
